--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "camelcase": "^6.0.0",
+    "dotenv": "^8.2.0",
     "glob": "^7.1.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "firebase": "^7.14.2"
   }
 }
