--- a/functions/package.json
+++ b/functions/package.json
@@ -13,11 +13,13 @@
     "node": "8"
   },
   "dependencies": {
+    "camel-case": "^4.1.1",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1"
+    "firebase-functions": "^3.6.1",
+    "glob": "^7.1.6"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
+    "eslint": "^5.16.0",
     "eslint-plugin-promise": "^4.0.1",
     "firebase-functions-test": "^0.2.0"
   },
