--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "camelcase": "^6.0.0",
+    "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "glob": "^7.1.6",
     "react": "^16.13.1",
