--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-responsive-carousel": "^3.2.5",
+    "react-multi-carousel": "^2.5.5",
     "react-scripts": "3.4.1"
   },
   "scripts": {
